fix status + api restore std, emp